--- a/resnet3d/requirements.txt
+++ b/resnet3d/requirements.txt
@@ -2,7 +2,8 @@
 tqdm
 opencv-python
 einops
-tensorflow
+tensorflow # For CPU users
+# tensorflow[and-cuda] # For GPU users
 keras
 matplotlib
 scikit-learn
